fixed font wrong font weight

--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -119,7 +119,7 @@ body * {
 .xs {
   font-size: clamp(1.125rem, calc(3vw - 1em), 1.5rem);
   line-height: clamp(1.5rem, calc(2vw + 0.5rem), 2rem);
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .default {
